# strixcam-calibration

./: main.py  pyproject.toml
src/: feed_calibration.py  feed_receiver.py
